# twain-server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  README.pt-BR.md
.travis/: install_boost.sh  install_twain_dsm.sh  ubuntu18.04-mkdsm-patch
cmake/: FindFreeImage.cmake
installer/: dasa-twain-server.sln
installer/dasa-twain-server-x64/: Product.wxs  dasa-twain-server-x64.wixproj
installer/dasa-twain-server-x64/src/: Microsoft_VC141_CRT_x64.msm
installer/dasa-twain-server-x86/: Product.wxs  dasa-twain-server-x86.wixproj
installer/dasa-twain-server-x86/src/: Microsoft_VC141_CRT_x86.msm
src/: CMakeLists.txt  application.cpp  application.hpp  application_linux.cpp  application_linux.hpp  application_windows.cpp  application_windows.hpp  application_windows_console.cpp  application_windows_native.cpp  application_windows_service.cpp  main.cpp  twain.cpp  twain.hpp
src/exception/: dsm_exception.hpp  http_exception.hpp
src/http/: listener.cpp  listener.hpp  router.cpp  router.hpp  session.cpp  session.hpp
src/http/handler/: cors.cpp  cors.hpp  devices.cpp  devices.hpp  handler.hpp  handlers.cpp  handlers.hpp  scan.cpp  scan.hpp  status.cpp  status.hpp
src/twain/: device.cpp  device.hpp  dsm.cpp  dsm.hpp  error_code.cpp  error_code.hpp  memory_transfer.cpp  memory_transfer.hpp  native_transfer.cpp  native_transfer.hpp  native_transfer_linux.cpp  native_transfer_windows.cpp  transfer.cpp  transfer.hpp
src/twain/transfer/: conversion_transfer.cpp  conversion_transfer.hpp  memory_transfer.cpp  memory_transfer.hpp  native_transfer.hpp  native_transfer_linux.cpp  native_transfer_windows.cpp
test/: CMakeLists.txt
test/twain-dsm-test/: CMakeLists.txt  test.cpp
watcher/: CMakeLists.txt  application.cpp  process.cpp  process.h
